[build-system]
requires = ['setuptools ~= 40.2', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.tox]
legacy_tox_ini = """
[tox]

isolated_build = True

envlist =
    py37
    py38

[testenv]

deps =

    # https://github.com/PyCQA
    flake8-bugbear
    flake8-commas
    flake8-docstrings
    pep8-naming

    # https://github.com/pytest-dev
    pytest
    pytest-cov ~= 2.0
    pytest-randomly

    # other
    pytest-flake8
    pytest-mypy
    pytest-pylint

commands = pytest --cov backlog --cov-fail-under 100 --flake8 --mypy-ignore-missing-imports --pylint {posargs}
"""
