[build-system]
requires = ['setuptools ~= 40.8.0']
build-backend = 'setuptools.build_meta'

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.7.0
isolated_build = true

envlist =
    py37
    py38

[testenv]

deps =

    # https://github.com/pytest-dev
    pytest ~= 4.2.0
    pytest-cov ~= 2.6.1
    pytest-randomly ~= 1.2.0

    # unofficial plugins
    pytest-bandit ~= 0.3.1
    pytest-flake8 ~= 1.0.0
    pytest-mypy ~= 0.3.2
    pytest-pylint ~= 0.14.0

    # https://github.com/PyCQA
    flake8 ~= 3.7.5
    flake8-bugbear ~= 18.8.0
    flake8-commas ~= 2.0.0
    flake8-docstrings ~= 1.2.0
    pep8-naming ~= 0.8.2

commands =  dev: {posargs:python}
           !dev-py37: pytest --cov backlog --cov-fail-under 100 --flake8 --mypy-ignore-missing-imports --pylint {posargs}
           !dev-py38: pytest --cov backlog --cov-fail-under 100 --flake8 --mypy-ignore-missing-imports {posargs}
           # Re-enable Pylint when Python 3.8 support is added: https://github.com/PyCQA/pylint/issues/2976
"""
