[build-system]
requires = ['setuptools ~= 41.0.1']
build-backend = 'setuptools.build_meta'

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.13.1
isolated_build = true

envlist =
    py37
    py38

[testenv]

deps =

    # https://github.com/pytest-dev
    pytest ~= 5.0.0
    pytest-cov ~= 2.7.1
    pytest-randomly ~= 3.0.0

    # unofficial plugins
    pytest-bandit ~= 0.5.1
    pytest-flake8 ~= 1.0.4
    pytest-mypy ~= 0.3.3
    pytest-pylint ~= 0.14.0

    # https://github.com/PyCQA
    flake8 ~= 3.7.7
    flake8-bugbear ~= 19.3.0
    flake8-commas ~= 2.0.0
    flake8-docstrings ~= 1.3.0
    pep8-naming ~= 0.8.2

commands = py37: pytest --cov backlog --cov setup --cov-report term-missing --cov-fail-under 100 --flake8 --mypy-ignore-missing-imports --pylint {posargs}
           py38: pytest --cov backlog --cov setup --cov-report term-missing --cov-fail-under 100 --flake8 --mypy-ignore-missing-imports {posargs}
           # Re-enable Pylint when Python 3.8 support is added: https://github.com/PyCQA/pylint/issues/2976
"""
